  last line of the buffer
- The file system browser's divider position would not be remembered if
  it was collapsed all the way
- Layout of 'Install Plugins' dialog box was a bit broken
- Added a workaround for bug on Windows where a few Alt-key sequences
  (Alt-Left, Alt-Right, Alt-Up, Alt-Down, Alt-PageUp, Alt-PageDown)
  inserted garbage in the text area

+ API Changes

- The 'rethrowBshErrors' parameter of the eval() and runScript() methods
  in the BeanShell class never did anything, so methods with that
  parameter have been deprecated:

  - BeanShell.eval(View,NameSpace,String) replaces
    BeanShell.eval(View,String,boolean) and
    BeanShell.eval(View,NameSpace,String,boolean)

  - You should pass BeanShell.getNameSpace() as the value of the
    namespace parameter to mimic the behavior of the old form which did
    not accept a namespace.

  - BeanShell.runScript(View,String,Reader,boolean) replaces
    BeanShell.runScript(View,String,boolean,boolean) and
    BeanShell.runScript(View,String,Reader,boolean,boolean)

  - You can pass 'null' as a Reader now, to mimic the behavior of the
    old Reader-less form.

  - Some new methods were added that throw exceptions instead of showing
    error dialog boxes:

    BeanShell._eval(View,NameSpace,String)
    BeanShell._runScript(View,String,Reader,boolean)

* Version 4.0pre7

+ Enhancements

- Yet-another-optimization to file loading. Directory search should be
  even faster
- Added a hack to prevent the WheelMouse plugin version 0.5 from being
  loaded under JDK 1.4
- It should now be possible to bind shortcuts to the numeric keypad,
  although this might not work perfectly on all Java implementations due
  to implementation bugs
- MacOS plugin version 1.1 (Kris Kopicki)
- 'Expand Folds With Level' and 'Expand All Folds' commands now scroll
  the text area to the caret position if necessary
- Documentation is now generated using DocBook-XSL 1.49, DocBook-DSSSL
  1.76